--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,12 @@ sentence-transformers==2.2.2
 scikit-learn==1.3.2
 numpy==1.24.3
 
+# Claude API Integration
+anthropic==0.8.1
+
+# Vector/Embedding Storage
+chromadb==0.4.18
+
 # Optional: CUDA support
 # torch==2.1.1+cu118 -f https://download.pytorch.org/whl/torch_stable.html
 
